test: convert all remaining tests to assertj